# alpaca_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  STRATEGY.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.claude/commands/: commit-push-redeploy.md
.github/workflows/: deploy.yml
data/backfill/: AAPL_252d.json  AAPL_30d.json  AMZN_252d.json  AMZN_30d.json  IWM_252d.json  IWM_30d.json  META_252d.json  META_30d.json  MSFT_252d.json  MSFT_30d.json  NVDA_252d.json  NVDA_30d.json  QQQ_252d.json  QQQ_30d.json  SPY_252d.json  SPY_30d.json
deploy/: Caddyfile.example  compose.yaml  live.env.example  paper.env.example
deploy/cron.d/: alpaca-bot
docs/: ALPACA_API.md  SYSTEM_OVERVIEW.md  validation-report-2026-04-30.md
docs/reviews/: 2026-06-12-full-code-review.md
docs/strategy-audit/: 2026-06-11-audit-table.md  2026-06-11-contrarian-strategy-evaluation.md  2026-06-12-audit-table.md  2026-06-12-honest-reevaluation.md  2026-06-15-break-even-slippage.md  (+27 more)
migrations/: 001_initial_schema.sql  002_add_initial_stop_price_to_orders.sql  003_add_fill_price_to_orders.down.sql  003_add_fill_price_to_orders.sql  004_add_tuning_results.sql  005_add_strategy_flags.down.sql  005_add_strategy_flags.sql  006_add_strategy_name.down.sql  006_add_strategy_name.sql  007_add_equity_baseline.sql  008_add_orders_pnl_index.sql  009_symbol_watchlist.sql  010_symbol_watchlist_ignored.sql  011_add_reconciliation_miss_count.sql  012_add_option_orders.sql  013_add_strategy_weights.sql  014_fractional_quantity.down.sql  014_fractional_quantity.sql  015_add_decision_log.sql  016_add_confidence_floor_store.sql  017_add_position_highest_price.sql  018_add_market_context.sql  019_add_decision_log_context_columns.sql  020_add_position_lowest_price.sql  021_add_external_upnl_baseline.sql  022_mark_orphaned_submitting_as_failed.sql  023_add_floor_raised_at.sql  024_add_order_reason.sql
scripts/: admin.sh  apply_candidate.sh  approve_validated_strategy_marker.sh  broker_flat_check.sh  bulk_watchlist_add.sql  cron_health_check.sh  deploy.sh  init_server.sh  install_cron.sh  nightly_cycle.sh  ops_check.sh  paper_activity_check.sh  paper_decision_dry_run.sh  paper_profit_probe.sh  paper_proof_status.sh  paper_readiness_check.sh  paper_readiness_if_needed.sh  promote_validated_strategy.sh  resolve_paper_approved_strategies.sh  rotate_dashboard_password.sh  run_check_with_audit.sh  run_if_ny_time.sh  run_locked_check_with_audit.sh  runtime_image_health_check.sh  scheduled_check_lock_skipped.sh  second_strategy_basket_scan.sh  second_strategy_setup_knob_scan.sh  session_guard.sh  sync_alpaca_credentials.sh  validate_strategies.sh
(+548 files in other folders)
